--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>SimpleScan</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Network Scanning</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Scan Report</a>
+            </li>
+            
+            
+          </ul>
+        </div>
+      </nav>
     <h1>SimpleScan</h1>
     <input type="text" id="targetUrl" placeholder="Enter target URL">
     <!--button to start scans  functions -->
-    <button onclick="startSpider()">Start Spider Scan</button>
-    <button onclick="startActiveScan()">Start Active Scan</button>
+    <button onclick="startSpider()"class="btn btn-primary">Start Spider Scan</button>
+    <button onclick="startActiveScan()"class="btn btn-primary">Start Active Scan</button>
     <pre id="output"></pre>
 
      <!--SCRIPT for when sending requests to the backend zap api -->
