--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     <input type="text" id="targetUrl" placeholder="Enter target URL">
     <!--button to start scans  functions -->
     <button onclick="startSpider()"class="btn btn-primary">Start Spider Scan</button>
-    <button onclick="startActiveScan()"class="btn btn-primary">Start Active Scan</button>
+    <button onclick="startActiveScan()"class="btn btn-secondary">Start Active Scan</button>
     <pre id="output"></pre>
 
      <!--SCRIPT for when sending requests to the backend zap api -->
