--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Network Scanning</a>
+                <a class="nav-link" href="/network">Network Scanning</a>
               </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Scan Report</a>
