--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,11 @@
                 <a class="nav-link" href="/network">Network Scanning</a>
               </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Scan Report</a>
+              <a class="nav-link" href="/spider">Web Scanning</a>
             </li>
-            
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li>
             
           </ul>
         </div>
