--- a/templates/spider.html
+++ b/templates/spider.html
@@ -1,58 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>SimpleScan</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/network">Network Scanning</a>
-              </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/spider">Web Scanning</a>
-            </li>
-            
-            
-          </ul>
-        </div>
-      </nav>
-    <h1>SimpleScan</h1>
-<button onclick="startSpider()"class="btn btn-primary">Start Spider Scan</button>
-<script>
+{% extends 'default.html' %}
 
-function startScan(apiEndpoint){
+{% block title %}Web Tools{% endblock %}
+
+{% block content %}
+<style>
+    
+  #targetUrl {
+    background-color: #323840; 
+    color: #fff; 
+    border: 1px solid #6c757d; 
+    margin-bottom: 1rem; 
+  }
+  .container {
+    height: 75vh;
+  }
+
+  
+  .btn-primary {
+    background-color: #495057; 
+    border-color: #495057; 
+  }
+
+  /* Add hover effect for the primary button */
+  .btn-primary:hover {
+    background-color: #5e6770;
+    border-color: #5e6770;
+  }
+
+  /* Style the secondary button */
+  .btn-secondary {
+    background-color: #6c757d; 
+    border-color: #6c757d; 
+  }
+
+  /* Add hover effect for the secondary button */
+  .btn-secondary:hover {
+    background-color: #7a8288;
+    border-color: #7a8288;
+  }
+</style>
+<div class="container d-flex justify-content-center align-items-center">
+    <div class="row justify-content-center">
+      <input type="text" id="targetUrl" class="form-control" placeholder="Enter target URL">
+      <!--buttons to start scans functions-->
+      <button onclick="startSpider()" class="btn btn-primary">Start Spider Scan</button>
+      <button onclick="startActiveScan()" class="btn btn-secondary">Start Active Scan</button>
+    </div>
+  </div>
+  
+    <pre id="output"></pre>
+
+    <!--SCRIPT for when sending requests to the backend zap api -->
+    <script>
+        function startScan(apiEndpoint) {
             //gets the target url from the input field
             var targetUrl = document.getElementById('targetUrl').value;
             //sends the target url to the backend which then sends it to zap api with the required content header and method type in json
             fetch(apiEndpoint, {
                 method: 'POST',
-                headers: {'Content-Type': 'application/json'},
-                body:JSON.stringify({ url:targetUrl})
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ url: targetUrl })
             })
 
-            //gets response from backend
-            .then(response => response.json())
-            //gets output from backend and converts from json to string
-            .then(data => document.getElementById('output').textContent = JSON.stringify(data, null, 2))
-            //catches errors in console
-            .catch(error => console.error('Error:', error));
-           
-        }
-function startSpider(){
-    startScan('/start_spider');
-}
-</script>
+                //gets response from backend
+                .then(response => response.json())
+                //gets output from backend and converts from json to string
+                .then(data => document.getElementById('output').textContent = JSON.stringify(data, null, 2))
+                //catches errors in console
+                .catch(error => console.error('Error:', error));
 
-</body>
-</html>
+        }
+        //starts spider function when the button is clicked in our backend
+        function startSpider() {
+            startScan('/start_spider');
+        }
+        //starts active sscan in the backend when button clicked
+        function startActiveScan() {
+            startScan('/start_active_scan');
+        }
+
+
+
+    </script>
+    </div>
+</div>
+{% endblock %}
