implemented network scanner using subprocess and stylized

--- a/templates/default.html
+++ b/templates/default.html
@@ -34,6 +34,48 @@
             color: #fff;
             
         }
+        body {
+      background-color: #121212;
+      color: #fff;
+  }
+  .container {
+      height: 75vh;
+  }
+  .form-custom {
+      background-color: #323840; 
+      padding: 20px;
+      border-radius: 5px;
+  }
+  .form-custom .form-control {
+      background-color: #464a4e;
+      color: #fff;
+      border: 1px solid #6c757d;
+  }
+  .form-custom .form-control:focus {
+      background-color: #464a4e;
+      border-color: #adb5bd;
+      outline: none;
+      color: #fff;
+  }
+  .form-custom .form-label {
+      color: #ddd;
+  }
+  .btn-primary {
+      background-color: #495057;
+      border-color: #495057;
+  }
+  .btn-primary:hover {
+      background-color: #5e6770;
+      border-color: #5e6770;
+  }
+  .btn-secondary {
+      background-color: #6c757d;
+      border-color: #6c757d;
+  }
+  .btn-secondary:hover {
+      background-color: #7a8288;
+      border-color: #7a8288;
+  }
     </style>
 </head>
 
