finished up network css so looks better and prints out results line by line

--- a/app/templates/default.html
+++ b/app/templates/default.html
@@ -9,7 +9,7 @@
     <style>
         .navbar-custom {
             background-color: #323840;
-            
+
         }
 
         .text-above-navbar {
@@ -23,59 +23,76 @@
             /* Some padding */
         }
 
-        
+
         .navbar-dark .navbar-toggler {
             border-color: rgba(255, 255, 255, 0.1);
         }
 
         body {
             background-color: #121212;
-            
+
             color: #fff;
-            
+
         }
+
         body {
-      background-color: #121212;
-      color: #fff;
-  }
-  .container {
-      height: 75vh;
-  }
-  .form-custom {
-      background-color: #323840; 
-      padding: 20px;
-      border-radius: 5px;
-  }
-  .form-custom .form-control {
-      background-color: #464a4e;
-      color: #fff;
-      border: 1px solid #6c757d;
-  }
-  .form-custom .form-control:focus {
-      background-color: #464a4e;
-      border-color: #adb5bd;
-      outline: none;
-      color: #fff;
-  }
-  .form-custom .form-label {
-      color: #ddd;
-  }
-  .btn-primary {
-      background-color: #495057;
-      border-color: #495057;
-  }
-  .btn-primary:hover {
-      background-color: #5e6770;
-      border-color: #5e6770;
-  }
-  .btn-secondary {
-      background-color: #6c757d;
-      border-color: #6c757d;
-  }
-  .btn-secondary:hover {
-      background-color: #7a8288;
-      border-color: #7a8288;
-  }
+            background-color: #121212;
+            color: #fff;
+        }
+
+        .container {
+            height: 75vh;
+        }
+
+        .form-custom {
+            background-color: #323840;
+            padding: 20px;
+            border-radius: 5px;
+        }
+
+        .form-custom .form-control {
+            background-color: #464a4e;
+            color: #fff;
+            border: 1px solid #6c757d;
+        }
+
+        .form-custom .form-control:focus {
+            background-color: #464a4e;
+            border-color: #adb5bd;
+            outline: none;
+            color: #fff;
+        }
+
+        .form-custom .form-label {
+            color: #ddd;
+        }
+
+        .btn-primary {
+            background-color: #495057;
+            border-color: #495057;
+        }
+
+        .btn-primary:hover {
+            background-color: #5e6770;
+            border-color: #5e6770;
+        }
+
+        .btn-secondary {
+            background-color: #6c757d;
+            border-color: #6c757d;
+        }
+
+        .btn-secondary:hover {
+            background-color: #7a8288;
+            border-color: #7a8288;
+        }
+
+        .result-box {
+            background-color: #323840;
+            border-radius: 5px;
+            padding: 20px;
+            color: #fff;
+        }
     </style>
 </head>
 
@@ -91,7 +108,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto"> 
+            <ul class="navbar-nav mx-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
