added print out for service and version in network page

--- a/app/templates/network.html
+++ b/app/templates/network.html
@@ -20,17 +20,12 @@
         
             {% for host in scan_results %}
                 <h5>IP: {{ host['IP'] }}</h5>
-                <h5>
-                    {% for port, state in host['Ports'] %}
-                        Port: {{ port }} 
-                        
-                    {% endfor %}
-                </h5>
-                <h5>
-                    {% for port, state in host['Ports'] %}
-                        State: {{ state }}
-                    {% endfor %}
-                </h5>
+                {% for port, state, service, version in host['Ports'] %}
+                    <h5>Port: {{ port }}</h5>
+                    <h5>State: {{ state }}</h5>
+                    <h5>Service: {{ service }}</h5>
+                    <h5>Version: {{ version }}</h5>
+                {% endfor %}
             {% endfor %}
         </div>
     {% else %}
