--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -44,8 +44,20 @@
 </head>
 
 
-<body class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-    
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+        
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/login">Login </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-4">
