--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,12 @@
 
 {% block content %}
 <div class="container">
-  Welcome to Simple Scan Dashboard
+  <h2>Welcome to Simple Scan Dashboard</h2>
+  <h4>Scanned IPs:</h4>
+  <ul>
+    {% for ip in unique_ips %}
+      <li><a href="{{ url_for('show_scans', ip_address=ip.ip_address) }}">{{ ip.ip_address }}</a></li>
+    {% endfor %}
+  </ul>
 </div>
 {% endblock %}
