styled new html for scans

--- a/app/templates/default.html
+++ b/app/templates/default.html
@@ -93,6 +93,11 @@
             padding: 20px;
             color: #fff;
         }
+        .list-group-item-dark {
+        background-color: #323840; /* Matches navbar and form background */
+        color: #fff; /* Ensures text is white */
+        border-color: #464a4e; /* Slightly lighter border for some contrast */
+        }
     </style>
 </head>
 
