--- a/app/templates/spider.html
+++ b/app/templates/spider.html
@@ -88,26 +88,30 @@
   </div>
   
   <script>
-      function fetchScanStatus() {
-          fetch('/get_scans_status')
-              .then(response => response.json())
-              .then(data => updateScanList(data))
-              .catch(error => console.error('Error fetching scan status:', error));
-      }
-  
-      function updateScanList(data) {
-          const scanList = document.getElementById('scanList');
-          scanList.innerHTML = '';  // Clear existing list
-          data.forEach(scan => {
-              const listItem = document.createElement('li');
-              listItem.textContent = `Scan ID: ${scan.scanId}, Status: ${scan.status}`;
-              scanList.appendChild(listItem);
-          });
-      }
-  
-      
-      setInterval(fetchScanStatus, 5000);  // Update every 5 seconds
-  </script>
+    let displayedScans = new Set();  // This set will store the IDs of scans already displayed
+
+    function fetchScanStatus() {
+        fetch('/get_scans_status')
+            .then(response => response.json())
+            .then(data => updateScanList(data))
+            .catch(error => console.error('Error fetching scan status:', error));
+    }
+
+    function updateScanList(data) {
+        const scanList = document.getElementById('scanList');
+        data.forEach(scan => {
+            if (!displayedScans.has(scan.scanId)) {
+                const listItem = document.createElement('li');
+                listItem.textContent = `Scan ID: ${scan.scanId}, Status: ${scan.status}`;
+                scanList.appendChild(listItem);
+                displayedScans.add(scan.scanId);  
+            }
+        });
+    }
+
+    // Fetch scan status periodically
+    setInterval(fetchScanStatus, 5000);  
+</script>
     </div>
 </div>
 {% endblock %}
